<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_shifts"
            android:icon="@drawable/ic_time"
            android:title="@string/shifts_title" />

        <item
            android:id="@+id/nav_returns"
            android:icon="@drawable/ic_receive"
            android:title="@string/return_sale" />

        <item
            android:id="@+id/nav_debts"
            android:icon="@drawable/ic_money"
            android:title="@string/debt_title" />

        <item
            android:id="@+id/nav_purchase_orders"
            android:icon="@drawable/ic_local_shipping"
            android:title="@string/purchase_orders_title" />

        <item
            android:id="@+id/nav_checks"
            android:icon="@drawable/ic_money"
            android:title="الشيكات" />

        <item
            android:id="@+id/nav_installments"
            android:icon="@drawable/ic_money"
            android:title="الأقساط" />

        <item
            android:id="@+id/nav_cash_drawer"
            android:icon="@drawable/ic_money"
            android:title="الخزينة" />

        <item
            android:id="@+id/nav_stock_count"
            android:icon="@drawable/ic_inventory"
            android:title="جرد المخزون" />

        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_people"
            android:title="المستخدمون" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_backup"
            android:title="@string/nav_backup" />

        <item
            android:id="@+id/nav_printer"
            android:icon="@drawable/ic_print"
            android:title="@string/nav_printer" />

    </group>

    <group android:id="@+id/group_about">

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about_app" />

        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_star"
            android:title="@string/nav_rate" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/nav_share" />

    </group>

</menu>
