<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="@dimen/spacing_xl">
	<TextView
		android:id="@+id/textview40"
		android:focusable="false"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/spacing_base"
		android:text="@string/str_5a61fe"
		android:textSize="@dimen/text_xl"
		android:textStyle="bold" />
	<TextView
		android:id="@+id/textview41"
		android:focusable="false"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/spacing_xl"
		android:text="@string/str_04be0b"
		android:textSize="@dimen/text_md" />
	<Button
		android:id="@+id/btn_create_backup"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/str_86ca10"
		android:textSize="@dimen/text_xs"
		style="@style/Widget.Material3.Button"
		app:icon="@android:drawable/ic_menu_save" />
	<Button
		android:id="@+id/btn_restore_backup"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/spacing_sm"
		android:text="@string/str_05ca28"
		android:textSize="@dimen/text_xs"
		style="@style/Widget.Material3.Button.TonalButton"
		app:icon="@android:drawable/ic_menu_revert" />
	<TextView
		android:id="@+id/textview42"
		android:focusable="false"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/spacing_base"
		android:padding="@dimen/spacing_sm"
		android:background="@drawable/bg_rounded_light"
		android:text="@string/str_f59a7c"
		android:textSize="@dimen/text_xs"
		android:textColor="@color/color_warning" />
</LinearLayout>
